@@ -185,7 +185,7 @@ def main():
             fix_locations(package, interpreter, SUPPORTED, options)
         stats = Scanner(interpreter, package, private_dir, options).result
 
-        dependencies = Dependencies(package, 'cpython3')
+        dependencies = Dependencies(package, 'cpython3', dh.build_depends)
         dependencies.parse(stats, options)
 
         if stats['ext_vers']:
